# cppPerf

./: .gitignore  CMakeLists.txt  CriticalSectionLock.h  README.md  ReadMe.txt  SimpleWebServerAuth.cpp  SimpleWebServerAuth.h  SlistEx.h  benchmark.sln  catch.hpp  cpp-practice.sln  leetcode.c  leetcodecpp.cpp  listvslist-gc.cpp  maxNumber.cpp  no_copy.h  perfExample.cpp  perfTest.cpp  perfTest.sln  perfTest.vcxproj  perfTest.vcxproj.filters  scope.h  stdafx.cpp  testLambda.cpp  testLock.cpp  testString.cpp  testStringCopy.cpp  testostringstream.cpp  tests.h  teststringbuilder.cpp  xstdafx.h
HackerRank/: BotBuilding.cpp  FourSquare.cpp  HackerLRUCache.cpp  HackerRank.cpp  HackerRank.vcxproj  HackerRank.vcxproj.filters  HackerRankDp.cpp  HackerRankSearch.cpp  HackerRankStack.cpp  hackerRankGraph.cpp
ProjectEuler/: CardGame.cpp  CardGame.h  ProjectEuler.vcxproj  ProjectEuler.vcxproj.filters  ProjectEulerDp.cpp  projectEuler.cpp  projectEulerCombinatorics.cpp
bmtests/: benchmark.props  perfExample.cpp  testStringCopy.cpp  teststringbuilder.cpp
bmtests/bm_hashtable/: bm_hashtable.cpp  bm_hashtable.vcxproj  bm_hashtable.vcxproj.filters  bm_hashtable_large.cpp  (+3 more)
codechef/: BlockedWeb.cpp  ReadMe.txt  SubArrayDeque.cpp  codechef.cpp  codechef.vcxproj  codechef.vcxproj.filters  stdafx.cpp
codeforces/: ATech.cpp  CMakeLists.txt  MaxNumber.cpp  codeforces.vcxproj  codeforces.vcxproj.filters
codejam/: interactive_runner.py
codejam/jam2018/: CMakeLists.txt  jam1B.cpp  jam2018.sln  wafflechoppercpp.cpp
codejam/jam2018/jam2018/: jam1B.cpp  jam2018.vcxproj  jam2018.vcxproj.filters  wafflechoppercpp.cpp
codejam/jam2019/: CMakeLists.txt  CMakeSettings.json  codejam1A.cpp  codejam1A2.cpp  codejam1B1.cpp  codejam1B2.cpp  codejam1B3.cpp  codejam1C1.cpp  codejam1C2.cpp  codejam1C3.cpp  codejamQ4.cpp  main.cpp  qualify2019.cpp  testing_tool1A.py
codejam/jam2020/: CMakeLists.txt  qualify2020.cpp
codejam2019/: codejam1A.cpp
common/: myalgo.h
cpp11/: .cproject  Alexandrescu.h  BrickByBrick.cpp  CMakeLists.txt  ConsoleLogger.h  DataFeed.cpp  DockingSchedule.cpp  DynBuffer.h  DynMsg.h  ElevatorControl.cpp  FactoryTest.cpp  FileReadMock.h  Functor.h  FunctorTest.cpp  FunctorX.h  HashMockTest.cpp  HashTable.h  HashTableBase .h  HashTableBase.h  HashTableBaseFileTest.cpp  HashTableBaseTest.cpp  HashTableBucketHashing.h  HashTableBucketTest.cpp  HashTableFileReadSimple.h  HashTableMockImpl.h  HashTableProbing.h  InterviewBook.cpp  Iterator.cpp  KnowledgeBase.cpp  Matrix2D.h  MessageConcept.h  MessageTest.cpp  MineSweeper.cpp  MoveCtor.h  ObjectFactory.h  PhoneRegistry.cpp  ReservationSystem.cpp  SeanParentAlgorithm.h  SeanParentBetterCode.h  SeanParentTest.cpp  (+25 more)
cpp11/Design/: CMakeLists.txt
cpp11/interview-examples/: CMakeLists.txt
cpp11/my_interviews/: CMakeLists.txt
cpp11/test/: CMakeLists.txt  member_access.cpp  simplified_alloc.cpp  test_macro.cpp  test_variant.cpp  thread_loccal.cpp
cpp11/threading_model/: CMakeLists.txt  main.cpp  multi_task_queue.h  simple_async.h  thread_pool.h
cppcon/: CMakeLists.txt  TaskWaiting.cpp  philosophers.cpp
cpptest/: .gitignore  CMakeLists.txt
cpptest/global/: dynamic.cpp  dynamic.h  informer.h  main.cpp  run.sh  static.cpp  static.h
cpptest/singleton/: CMakeLists.txt  main.cpp  singleton.cpp  singleton.h  static_lib.cpp  static_lib.h
devtest/: CMakeLists.txt  CMakeSettings.json  todo.txt
devtest/cmake/: DummyConfig.cmake.in  ImplibConfig.cmake.in  toolchain_find.cmake
devtest/lib_combo_dll/: CMakeLists.txt  dummy.cpp  dummy.h
devtest/lib_combo_dll/dummy/: dummy.h
devtest/lib_combo_static/: CMakeLists.txt
devtest/lib_combo_static2/: CMakeLists.txt
devtest/lib_test/: CMakeLists.txt  main.cpp
devtest/lib_test_dll/: CMakeLists.txt  main.cpp
devtest/liba/: CMakeLists.txt  a.cpp
devtest/liba/include/: liba.h
devtest/libb/: CMakeLists.txt  b.cpp
devtest/libb/include/libb/: libb.h
devtest/proto3_msg/: CMakeLists.txt  add_person.cc  list_people.cc
devtest/proto_msg/: CMakeLists.txt  proto_files_glob.cmake
devtest/proto_msg/source/: addressbook.proto
devtest/socket_client/: CMakeLists.txt  socket_client.cpp
devtest/socket_server/: CMakeLists.txt  socket_server.cpp
devtest/test_dll/: CMakeLists.txt  main.cpp
devtest/test_static/: CMakeLists.txt  main.cpp
devtest2/: CMakeLists.txt
devtest2/test_installed/: CMakeLists.txt
devtest2/test_installed_import/: CMakeLists.txt
leetcode/: BinarySearch.cpp  BinarySearchTree.cpp  BinaryTree.cpp  BitManip.cpp  Board2D.cpp  CMakeLists.txt  CircularDataStruct.cpp  DynamicProgramming.cpp  Game.cpp  Google.cpp  Graph.cpp  HackerLRUCache.cpp  HackerRankDp.cpp  HackerRankSearch.cpp  LinkedList.cpp  ListNode.h  Math.cpp  Matrix.cpp  NaryTree.cpp  OtherTree.cpp  Random.cpp  STL-no_rawloop.cpp  String.cpp  TreeNode.h  backTracking.cpp  calculator.cpp  compilerOptions.cmake  cpp-practice.sln  decodeways.cpp  design.cpp  designHash.cpp  designHeap.cpp  designIterator.cpp  hashtable.cpp  helper.h  leetcode.c  leetcode.sln  leetcode.vcxproj  leetcode.vcxproj.filters  leetcode2015.sln  (+13 more)
leetcode/backtracking/: CMakeLists.txt  backtracking.cpp
leetcode/basic/: CMakeLists.txt  associative.cpp  math.cpp
leetcode/bfs/: CMakeLists.txt  grid_path.cpp
leetcode/binary_search/: BinarySearch.cpp  CMakeLists.txt  MountainArray.cpp  sliding_window.cpp
leetcode/contest/: CMakeLists.txt  contest.cpp
leetcode/dfs/: CMakeLists.txt  CMakeSettings.json  flower_garden.cpp  leetcode.cpp
leetcode/dynamicProgramming/: ArrayPartition.cpp  CMakeLists.txt  CMakeSettings.json  DynamicProgramming.cpp  LastStone.cpp  binary_dp.cpp  bottomup_ON3.cpp  coin_change.cpp  edit_distance.cpp  knapsack.cpp  longest_chain.cpp  mergeStones.cpp  prefix-suffix.cpp  triangulation.cpp
leetcode/math/: CMakeLists.txt  CMakeSettings.json  array.cpp  associative.cpp  math.cpp
leetcode/recursion/: CMakeLists.txt  brace_expression.cpp
leetcode/stack/: CMakeLists.txt  monotone.cpp  stack_easy.cpp
leetcode/tree/: BinaryTree.cpp  CMakeLists.txt  binary_tree.cpp  stack.cpp
profiling/: CMakeLists.txt  main.cpp
(+33 files in other folders)
