cmake_minimum_required(VERSION 3.12.1)
project(liba LANGUAGES CXX)
set( CMAKE_VERBOSE_MAKEFILE on )

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INCLUDE_CURRENT_DIR_IN_INTERFACE ON) #useful if headers are in cmake folder
add_library(liba STATIC a.cpp)
target_include_directories(liba PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
	INTERFACE $<INSTALL_INTERFACE:include>
)
file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
FILE(COPY ${CMAKE_CURRENT_LIST_DIR}/liba.h
	DESTINATION ${CMAKE_BINARY_DIR}/include/liba
	FILES_MATCHING PATTERN *.h )
