cmake_minimum_required(VERSION 3.12.1)
project(libb LANGUAGES CXX)
set( CMAKE_VERBOSE_MAKEFILE on )

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(libb STATIC b.cpp)
FILE(INSTALL ${CMAKE_CURRENT_LIST_DIR}/include DESTINATION ${CMAKE_BINARY_DIR}	FILES_MATCHING PATTERN *.h )
target_include_directories(libb PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>
	$<INSTALL_INTERFACE:include>
)